<resources>
    <string name="app_name">CALCULATOR</string>
    <string name="c">⌫</string>
    <string name="sqrt">√</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="X">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="kijani">+-</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="AC">AC</string>
    <string name="square">x²</string>
    <string name="rightBrac">)</string>
    <string name="leftBrac">(</string>
    <string name="inverse">x⁻¹</string>
</resources>