<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:paddingTop="25dp"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:background="@color/black"
        android:id="@+id/title"
        />

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:layout_below="@id/title"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_layout"
        android:layout_marginBottom="24dp"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/button_layout"
        android:layout_alignParentBottom="true"
        android:background = "@color/grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_inverse"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/grey"
                android:text="@string/inverse"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:cornerRadius="36dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_square"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/grey"
                android:text="@string/square"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_openParen"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/grey"
                android:text="@string/leftBrac"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_closeParen"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/grey"
                android:text="@string/rightBrac"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/AC"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_AC"
                android:backgroundTint="@color/red"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sqrt"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="12dp"
                android:text="@string/sqrt"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:cornerRadius="36dp"
                android:backgroundTint="@color/blue"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_percent"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="12dp"
                android:text="@string/percent"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:backgroundTint="@color/blue"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="12dp"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:backgroundTint="@color/blue"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/seven"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_seven"
                android:backgroundTint="@color/num"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/eight"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_eight"
                android:backgroundTint="@color/num"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/nine"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_nine"
                android:backgroundTint="@color/num"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/X"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_multiply"
                android:backgroundTint="@color/blue"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/four"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_four"
                android:backgroundTint="@color/num"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_five"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="12dp"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:backgroundTint="@color/num"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_six"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="12dp"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:backgroundTint="@color/num"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/minus"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_minus"
                android:backgroundTint="@color/blue"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/one"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_one"
                android:backgroundTint="@color/num"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/two"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_two"
                android:backgroundTint="@color/num"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/three"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_three"
                android:backgroundTint="@color/num"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/plus"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_add"
                android:backgroundTint="@color/blue"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center"
            android:layout_marginBottom="5dp">


            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/zero"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_zero"
                android:backgroundTint="@color/num"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="12dp"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:backgroundTint="@color/num"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_back"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="12dp"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:backgroundTint="@color/red"

                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/equal"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_equal"
                android:backgroundTint="@color/sky"
                />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>